--- a/app/views/budget_items/_row.html.haml
+++ b/app/views/budget_items/_row.html.haml
@@ -1,9 +1,10 @@
 %tr{class: record.item ? '' : 'section_header', id: record.item ? "budget_item_#{record.item.id}" : '' }
   %td= record.header
   -record.columns.each do |column|
-    %td.number_column= format_currency(column)
-  %td.number_column= format_currency(record.total)
+    %td.text-right= format_currency(column)
+  %td.text-right= format_currency(record.total)
   %td.action_cell
     -if record.item
-      =link_to 'Edit', edit_budget_item_path(record.item), class: 'edit_button', title: 'Click here to edit this budget item.'
-      =render 'shared/delete_form', resource: record.item, url: budget_item_url(record.item)
+      .btn-group
+        =edit_link edit_budget_item_path(record.item), 'this budget item'
+        =delete_link budget_item_path(record.item), 'this budget item'
