--- a/app/views/budget_items/_total_fields.html.haml
+++ b/app/views/budget_items/_total_fields.html.haml
@@ -1,4 +1,3 @@
-%div.method_total
+.form-group.method_total
   =form.label :total, 'Total'
-  %br
   =number_field_tag 'distributor[options][total]', distributor.total, class: 'method_total form-control', id: 'distributor_options_total'
