style the budget monitors

--- a/app/assets/stylesheets/budget_monitors.css.scss
+++ b/app/assets/stylesheets/budget_monitors.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the BudgetMonitors controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.budget_monitor_account {
+  font-weight: bold;
+  font-size: larger;
+}
+
+.nil_monitor {
+  font-weight: bold;
+}
