--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -1,7 +1,8 @@
-.row
-  .col-md-4.col-md-offset-4
-    %h2#page_title Reports
+=content_for :page_title do
+  Reports
 
-    %ul
+.row
+  .col-md-4
+    .list-group
       -@reports.each do |name, path|
-        %li= link_to name, path
+        = link_to name, path, class: 'list-group-item'
