misc feature clean up

--- a/app/views/budget_monitors/index.html.haml
+++ b/app/views/budget_monitors/index.html.haml
@@ -12,7 +12,7 @@
   Budget monitors
 
 .row
-  .col-md-4
+  .col-md-4.budget_monitors
     -@budget_monitors.each do |budget_monitor|
       =render 'graph', budget_monitor: budget_monitor
     .actions
