--- a/app/views/budget_items/_average_fields.html.haml
+++ b/app/views/budget_items/_average_fields.html.haml
@@ -1,3 +1,3 @@
 .form-group.method_average
-  =form.label :amount, 'Amount'
+  =form.label :amount, 'Monthly amount'
   =number_field_tag 'distributor[options][amount]', distributor.amount, class: 'method_average form-control', id: 'distributor_options_amount'
