--- a/app/views/prices/index.html.haml
+++ b/app/views/prices/index.html.haml
@@ -5,7 +5,7 @@
   .col-md-3
     %table#prices_table.table.table-striped
       %tr
-        %th.text-right Trade date
+        %th.text-right Date
         %th.text-right Price
         %th.action_cell &nbsp;
       -@prices.each do |price|
