--- a/app/assets/javascripts/app/entities.js.erb
+++ b/app/assets/javascripts/app/entities.js.erb
@@ -5,7 +5,13 @@
 
   app.controller('EntitiesController', ['$http', function($http) {
     var _self = this;
-    this.entities = []
+    this.entities = [];
+    this.currentEntity = null;
+    this.currentEntityId = null;
+    this.setCurrentEntity = function() {
+      _self.currentEntity = _self.entities.
+      filter(function(e){ return e.id == _self.currentEntityId;})[0];
+    };
     $http.get('/entities.json').success(function(data) {
       _self.entities = data;
     });
