--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -9,3 +9,4 @@
       {{ match.description }}
 
   %entity-manager{ 'ng-show' => 'search.isSelected("entity-manager")' }
+  %account-manager{ 'ng-show' => 'search.isSelected("account-manager")' }
