--- a/app/views/attachments/new.html.haml
+++ b/app/views/attachments/new.html.haml
@@ -1,10 +1,10 @@
 %h2#page_title New attachment
 =render "shared/errors", :resource => @attachment
-=form_for([@attachment.transaction, @attachment]) do |f|
+=form_for([@attachment.owning_transaction, @attachment]) do |f|
   =f.label :raw_file, 'File'
   %br
   =f.file_field :raw_file
 
   .actions
     =f.submit 'Save', class: 'save_button', title: 'Click here to save the attachment.'
-    =link_to 'Back', transaction_attachments_path(@attachment.transaction), class: 'back_button', title: 'Click here to return to the list of attachments.'
+    =link_to 'Back', transaction_attachments_path(@attachment.owning_transaction), class: 'back_button', title: 'Click here to return to the list of attachments.'
