--- a/app/assets/javascripts/app/accounts.js.coffee.erb
+++ b/app/assets/javascripts/app/accounts.js.coffee.erb
@@ -6,12 +6,31 @@ app.controller 'AccountsController', ['$http', ($http) ->
   @displayRecords = []
 
   $http.get("/entities/14/accounts.json").success (data) ->
-    console.log data
     _self.accounts = data
-    _self.displayRecords = _.reduce data, (list, account) ->
-      list.push {caption: account.name, balance: account.value + account.children_value }
-      return list
-    , []
+    types = ['Asset', 'Liability', 'Equity', 'Income', 'Expense']
+    groupedAccounts = _.groupBy data, 'account_type'
+    _self.displayRecords = _.chain(types).reduce( (list, type) ->
+      # Calculate the summary header
+      typedAccounts = _.sortBy groupedAccounts[type.toLowerCase()], 'path'
+      typeTotal = _.reduce(typedAccounts, (sum, account) ->
+        sum + account.value + account.children_value
+      , 0)
+      list.push {
+        caption: type,
+        balance: typeTotal,
+        isHeader: true
+      }
+
+      # transform the accounts into display records
+      _.each typedAccounts, (account) ->
+        list.push {
+          caption: account.name,
+          balance: account.value + account.children_value,
+          isHeader: false
+        }
+
+      list
+    , []).value()
   return
 ]
 
