--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -5,3 +5,15 @@
 .header-row {
   font-weight: bold;
 }
+
+.account_depth_0 {
+}
+.account_depth_1 {
+  padding-left: 2em;
+}
+.account_depth_2 {
+  padding-left: 4em;
+}
+.account_depth_3 {
+  padding-left: 8em;
+}
