--- a/app/views/layouts/app.html.haml
+++ b/app/views/layouts/app.html.haml
@@ -9,8 +9,10 @@
     %meta{:content => "", :name => "author"}/
     %title Money
     =stylesheet_link_tag 'application', media: :all
-    =javascript_include_tag 'app'
     =stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'
+    =javascript_include_tag 'https://code.jquery.com/jquery-2.1.4.min.js'
+    =javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'
+    =javascript_include_tag 'app'
     =csrf_meta_tags
 %body{ 'ng-controller' => 'EntitiesController as entitiesCtrl' }
   %nav.navbar.navbar-inverse.navbar-fixed-top
